// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateClusterForm it renders to match snapshot when conda is required and volumeMount field is set 1`] = `
<div>
  <form>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"Internal Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount","options":[{"text":"Test Store","value":"teststore"}]}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"condaPath","label":"Path to Conda environment","helperText":"The file path to the conda environment on the selected Data Store to be used by the workers.","placeholder":"/data/conda/conda-env"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkers","label":"Maximum number of workers","type":"number","InputProps":{"inputProps":{"min":1,"max":8,"step":1}},"helperText":"Value range: min=1 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerMemoryGb","label":"Maximum worker memory (GB)","type":"number","InputProps":{"inputProps":{"min":0.5,"max":8,"step":0.5}},"helperText":"Value range: min=0.5 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerCpu","label":"Maximum worker CPU use","type":"number","InputProps":{"inputProps":{"min":0.5,"max":2,"step":0.5}},"helperText":"Value range: min=0.5 max=2 default=0.5"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets"}
    </div>
    <div
      class="makeStyles-fromControlContainer-7"
    >
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-o0h1hg-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="submit"
      >
        Create
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-4eo762-MuiButtonBase-root-MuiButton-root"
        style="margin-left: 5px;"
        tabindex="0"
        type="button"
      >
        Cancel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateClusterForm it renders to match snapshot with condaPath field when volumeMount field is set 1`] = `
<div>
  <form>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"Internal Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount (optional)","options":[{"text":"None","value":"--none--"},{"text":"Test Store","value":"teststore"}]}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"condaPath","label":"Path to Conda environment (optional)","helperText":"The file path to the conda environment on the selected Data Store to be used by the workers.","placeholder":"/data/conda/conda-env"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkers","label":"Maximum number of workers","type":"number","InputProps":{"inputProps":{"min":1,"max":8,"step":1}},"helperText":"Value range: min=1 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerMemoryGb","label":"Maximum worker memory (GB)","type":"number","InputProps":{"inputProps":{"min":0.5,"max":8,"step":0.5}},"helperText":"Value range: min=0.5 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerCpu","label":"Maximum worker CPU use","type":"number","InputProps":{"inputProps":{"min":0.5,"max":2,"step":0.5}},"helperText":"Value range: min=0.5 max=2 default=0.5"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets"}
    </div>
    <div
      class="makeStyles-fromControlContainer-5"
    >
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-o0h1hg-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="submit"
      >
        Create
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-4eo762-MuiButtonBase-root-MuiButton-root"
        style="margin-left: 5px;"
        tabindex="0"
        type="button"
      >
        Cancel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateClusterForm it renders to match snapshot without condaPath field when volumeMount field has no value 1`] = `
<div>
  <form>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"Internal Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount (optional)","options":[{"text":"None","value":"--none--"},{"text":"Test Store","value":"teststore"}]}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkers","label":"Maximum number of workers","type":"number","InputProps":{"inputProps":{"min":1,"max":8,"step":1}},"helperText":"Value range: min=1 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerMemoryGb","label":"Maximum worker memory (GB)","type":"number","InputProps":{"inputProps":{"min":0.5,"max":8,"step":0.5}},"helperText":"Value range: min=0.5 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerCpu","label":"Maximum worker CPU use","type":"number","InputProps":{"inputProps":{"min":0.5,"max":2,"step":0.5}},"helperText":"Value range: min=0.5 max=2 default=0.5"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets"}
    </div>
    <div
      class="makeStyles-fromControlContainer-1"
    >
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-o0h1hg-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="submit"
      >
        Create
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-4eo762-MuiButtonBase-root-MuiButton-root"
        style="margin-left: 5px;"
        tabindex="0"
        type="button"
      >
        Cancel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateClusterForm it renders to match snapshot without condaPath field when volumeMount field is set as None option 1`] = `
<div>
  <form>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"displayName","label":"Display Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"name","label":"Internal Name"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"volumeMount","label":"Data Store to Mount (optional)","options":[{"text":"None","value":"--none--"},{"text":"Test Store","value":"teststore"}]}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkers","label":"Maximum number of workers","type":"number","InputProps":{"inputProps":{"min":1,"max":8,"step":1}},"helperText":"Value range: min=1 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerMemoryGb","label":"Maximum worker memory (GB)","type":"number","InputProps":{"inputProps":{"min":0.5,"max":8,"step":0.5}},"helperText":"Value range: min=0.5 max=8 default=4"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"maxWorkerCpu","label":"Maximum worker CPU use","type":"number","InputProps":{"inputProps":{"min":0.5,"max":2,"step":0.5}},"helperText":"Value range: min=0.5 max=2 default=0.5"}
    </div>
    <div>
      Field mock 
      {"InputLabelProps":{"shrink":true},"name":"assets","label":"Assets"}
    </div>
    <div
      class="makeStyles-fromControlContainer-3"
    >
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-o0h1hg-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="submit"
      >
        Create
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-4eo762-MuiButtonBase-root-MuiButton-root"
        style="margin-left: 5px;"
        tabindex="0"
        type="button"
      >
        Cancel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
